web and common .net 5 class libraries added

--- a/UmbracoCalendarDemo.Web.UI/UmbracoCalendarDemo.Web.UI.csproj
+++ b/UmbracoCalendarDemo.Web.UI/UmbracoCalendarDemo.Web.UI.csproj
@@ -18,7 +18,14 @@
         <Content Include="umbraco/**" CopyToOutputDirectory="Always" />
         <Content Remove="umbraco/Data/**" />
         <Content Remove="umbraco/Logs/**" />
-        <Content Remove="umbraco/mediacache/**"/>
+        <Content Remove="umbraco/mediacache/**" />
+    </ItemGroup>
+
+
+
+    <ItemGroup>
+      <ProjectReference Include="..\UmbracoCalendarDemo.Common\UmbracoCalendarDemo.Common.csproj" />
+      <ProjectReference Include="..\UmbracoCalendarDemo.Web\UmbracoCalendarDemo.Web.csproj" />
     </ItemGroup>
 
     <!-- Set this to true if ModelsBuilder mode is not InMemoryAuto-->
