--- a/UmbracoCalendarDemo.Web/UmbracoCalendarDemo.Web.csproj
+++ b/UmbracoCalendarDemo.Web/UmbracoCalendarDemo.Web.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Umbraco.Cms.Web.Website" Version="9.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\UmbracoCalendarDemo.Common\UmbracoCalendarDemo.Common.csproj" />
   </ItemGroup>
 
