--- a/UmbracoCalendarDemo.Web/UmbracoCalendarDemo.Web.csproj
+++ b/UmbracoCalendarDemo.Web/UmbracoCalendarDemo.Web.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bergmania.OpenStreetMap" Version="3.3.1" />
     <PackageReference Include="Umbraco.Cms.Web.Website" Version="9.1.1" />
   </ItemGroup>
 
