UmbracoCalendarDemo.Web.UI project Umbraco.TheStarterKit package installation done

--- a/UmbracoCalendarDemo.Web.UI/UmbracoCalendarDemo.Web.UI.csproj
+++ b/UmbracoCalendarDemo.Web.UI/UmbracoCalendarDemo.Web.UI.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="Umbraco.Cms" Version="9.1.1" />
+        <PackageReference Include="Umbraco.TheStarterKit" Version="9.0.0" />
     </ItemGroup>
 
 
