base surface and base render controllers + 2 test controllers added

--- a/UmbracoCalendarDemo.Web/UmbracoCalendarDemo.Web.csproj
+++ b/UmbracoCalendarDemo.Web/UmbracoCalendarDemo.Web.csproj
@@ -13,4 +13,10 @@
     <ProjectReference Include="..\UmbracoCalendarDemo.Common\UmbracoCalendarDemo.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\" />
+    <Folder Include="Models\" />
+    <Folder Include="UmbracoModels\" />
+  </ItemGroup>
+
 </Project>
