models builder changes

--- a/UmbracoCalendarDemo.Web.UI/appsettings.json
+++ b/UmbracoCalendarDemo.Web.UI/appsettings.json
@@ -20,6 +20,12 @@
       },
       "Global": {
         "Id": "95030ff2-fff2-406f-9e7c-a9e57dceefb0"
+      },
+      "ModelsBuilder": {
+        "ModelsMode": "SourceCodeAuto",
+        "AcceptUnsafeModelsDirectory": true,
+        "ModelsDirectory": "~/../UmbracoCalendarDemo.Web/UmbracoModels",
+        "ModelsNamespace": "UmbracoCalendarDemo.Web.UmbracoModels"
       }
     }
   }
